# watchdog

./: .gitignore  CLAUDE.md  GETTING_STARTED.md  INSTALL.md  LICENSE  README.md  SPEC.md  docs-brief.md  identity-brief.md  pyproject.toml  requirements.txt  setup.sh
.github/: release-template.md
.github/scripts/: extract-whats-new.py  splice-release-notes.py
.github/workflows/: ci.yml  claude-review.yml  publish.yml
dev/: batch_test.py
pipeline/: arrows_parser.py  near_dup.py  preprocess.py
scripts/: analyze-session
skills/: health.md  ingest.md  query.md  surface.md
skills/records/: bankruptcy.md  corporate-filings.md  court-documents.md  financial-statements.md  government-contracts.md
src/watchdog/: __init__.py  cli.py  setup_cmd.py
src/watchdog/cmd/: base.py  ingest.py  registry.py  setup.py  vault.py
src/watchdog/pipeline/: abort.py  arrows_parser.py  batch_get.py  classify.py  embed.py  entity_norm.py  ingest_setup.py  merge.py  near_dup.py  postflight.py  preflight.py  preprocess.py  preprocess_batch.py  section.py  timeline.py  write_entity.py  write_vault.py
src/watchdog/skills/: watchdog-context.md  watchdog-entity.md  watchdog-health.md  watchdog-ingest-finalize-subagent.md  watchdog-ingest-section-subagent.md  watchdog-ingest-subagent.md  watchdog-ingest.md  watchdog-query.md  watchdog-surface.md  watchdog-wiki.md
src/watchdog/skills/records/: _template.md  academic-research.md  administrative-tribunals.md  aircraft-logs.md  audio-video.md  audit-reports.md  bankruptcy.md  corporate-filings.md  corrections-records.md  court-documents.md  criminal-proceedings.md  dns-whois.md  election-filings.md  environmental-filings.md  financial-statements.md  foi-responses.md  general-records.md  government-contracts.md  government-reports.md  healthcare-licensing.md  immigration-refugee.md  insurance-filings.md  labour-arbitration.md  land-registries.md  legislation.md  legislature-transcripts.md  lobbying-records.md  municipal-records.md  news-clippings.md  police-records.md  procurement-records.md  professional-licensing.md  real-estate.md  regulatory-filings.md  tax-documents.md  vehicle-registrations.md
src/watchdog/templates/vault/: CLAUDE.md  context.md  hot.md  index.md  log.md
tests/: conftest.py  test_abort.py  test_arrows_parser.py  test_batch_get.py  test_classify.py  test_cli.py  test_embed.py  test_ingest_setup.py  test_merge.py  test_near_dup.py  test_preflight.py  test_preprocess.py  test_preprocess_batch.py  test_section.py  test_timeline.py  test_write_entity.py  test_write_vault.py
