[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Note: "watchdog" is taken on PyPI (filesystem events library).
# Package name is "watchdog-intel"; the CLI command is still "watchdog".
name = "watchdog-intel"
version = "0.1.0a2"
description = "Investigative journalism document intelligence — drop records, find connections"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["journalism", "documents", "ocr", "investigative", "obsidian", "public-records"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "docling>=2.0",
    "pypdf>=4.0",
    "pyyaml>=6.0",
    "fastembed>=0.4",
    "argcomplete>=3.0",
    "ocrmac; sys_platform == 'darwin'",
]

[project.optional-dependencies]
asr = ["docling[asr]"]          # Audio/video transcription — requires ffmpeg
tesseract = ["tesserocr"]       # Faster Tesseract OCR; requires system Tesseract headers
dev = ["pytest>=8.0", "numpy>=1.24"]

[project.scripts]
watchdog = "watchdog.cli:main"

[project.urls]
Homepage   = "https://github.com/tomcardoso/watchdog"
Repository = "https://github.com/tomcardoso/watchdog"
Issues     = "https://github.com/tomcardoso/watchdog/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/watchdog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

